concession-kiosk-app-demo/backend-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: concession-kiosk-app
  labels:
    app: backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: backend
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  sessionAffinity: None
  selector:
    deployment: backend
