concession-kiosk-app-demo/db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    role: mongodb
  namespace: concession-kiosk-db
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    role: mongodb
