concession-kiosk-app-demo/frontend-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  namespace: concession-kiosk-web
  labels:
    app: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
spec:
  host: ""
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - type: Admitted
          status: 'True'
